<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearCelular">

    <EditText
        android:id="@+id/editFechaCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editNombreCelular"
        app:layout_constraintStart_toStartOf="@+id/editNombreCelular"
        app:layout_constraintTop_toBottomOf="@+id/editNombreCelular" />

    <Button
        android:id="@+id/crearCelularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CREAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editPixelesCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="248dp"
        android:ems="10"
        android:inputType="textShortMessage|number"
        app:layout_constraintEnd_toEndOf="@+id/editNombreCelular"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNombreCelular"
        app:layout_constraintTop_toBottomOf="@+id/editNombreCelular" />

    <EditText
        android:id="@+id/editPrecioCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/editNombreCelular"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNombreCelular"
        app:layout_constraintTop_toBottomOf="@+id/editNombreCelular" />

    <EditText
        android:id="@+id/editNombreCelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textShortMessage|textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreCelular"
        app:layout_constraintBottom_toBottomOf="@+id/editNombreCelular"
        app:layout_constraintEnd_toStartOf="@+id/editNombreCelular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editNombreCelular" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lectorHuella"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxLectorHuella"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxLectorHuella"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBoxLectorHuella" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pixelesCamara"
        app:layout_constraintBottom_toBottomOf="@+id/editPixelesCelular"
        app:layout_constraintEnd_toStartOf="@+id/editPixelesCelular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editPixelesCelular" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precioCelular"
        app:layout_constraintBottom_toBottomOf="@+id/editPrecioCelular"
        app:layout_constraintEnd_toStartOf="@+id/editPrecioCelular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editPrecioCelular" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaCelular"
        app:layout_constraintBottom_toBottomOf="@+id/editFechaCelular"
        app:layout_constraintEnd_toStartOf="@+id/editFechaCelular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editFechaCelular" />

    <CheckBox
        android:id="@+id/checkBoxLectorHuella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="SI"
        app:layout_constraintEnd_toEndOf="@+id/editNombreCelular"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editNombreCelular"
        app:layout_constraintTop_toBottomOf="@+id/editNombreCelular" />

</androidx.constraintlayout.widget.ConstraintLayout>